feat: 实现 Telegram 通知模块
新增功能:
- notify.py: 重写 NotificationManager，支持多种通知类型
  - 启动通知: 显示账户、挂单、持仓信息
  - 成交通知: 买入/止盈成交，含持仓更新
  - 错误通知: 错误类型、上下文、建议
  - 网格重建通知
  - 风险预警通知
  - 每日汇总通知
  - 心跳通知（可选）
- 所有金额统一使用 USDT 计价

配置更新:
- config.yaml: 添加 telegram 配置节
- strategy.py: 集成通知调用
  - _init_notifier(): 初始化通知器
  - _send_startup_notification(): 启动通知
  - _send_shutdown_notification(): 停止通知
  - _notify_order_filled(): 成交通知
  - _notify_grid_rebuild(): 重建通知
  - _notify_error(): 错误通知

文档:
- SPEC/telegram_notification.md: 需求规格文档

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -123,3 +123,37 @@ api:
   key_env: "GATE_KLG_API_KEY"
   secret_env: "GATE_KLG_API_SECRET"
   passphrase_env: ""          # 若有子账户/额外口令可填，否则留空
+
+# ============================================
+# Telegram 通知配置
+# ============================================
+telegram:
+  # 基础配置（从环境变量读取）
+  enabled: false              # 是否启用 Telegram 通知
+  bot_token_env: "TG_BOT_TOKEN"
+  chat_id_env: "TG_CHAT_ID"
+  
+  # 通知开关
+  notifications:
+    # 必要通知（建议开启）
+    startup: true             # 启动通知
+    shutdown: true            # 停止通知
+    error: true               # 错误通知
+    order_filled: true        # 成交通知
+    
+    # 可选通知
+    order_placed: false       # 挂单通知（较频繁，建议关闭）
+    grid_rebuild: true        # 网格重建通知
+    orders_summary: true      # 挂单汇总（启动时发送）
+    
+    # 风险通知
+    risk_warning: true        # 风险预警
+    near_stop_loss_pct: 0.02  # 距止损预警阈值 2%
+    
+    # 汇总通知
+    daily_summary: true       # 每日汇总
+    daily_summary_time: "20:00"
+    
+    # 心跳（可选）
+    heartbeat: false          # 心跳通知
+    heartbeat_interval_hours: 4
