--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -16,9 +16,9 @@ trading:
   market_type: "futures"      # 合约市场 (USDT 永续)
   margin_mode: "cross"        # 保证金模式: cross (全仓) | isolated (逐仓)
   leverage: 10                 # 杠杆倍数 (建议 3-5x，与 position.max_leverage 保持一致)
-  timeframe: "15m"             # 主交易周期
+  timeframe: "4h"             # 主交易周期
   aux_timeframes:             # 辅助周期 (多周期融合)
-    - "1h"
+    - "1d"
 
 # K线数据源配置
 kline_feed:
