feat: Gate 数据源 + Telegram 时间戳 + 成交后延迟重建
- 新增 GateKlineFeed 替代 BinanceKlineFeed 作为币圈数据源
- Telegram 通知添加时间戳（精确到秒）
- 支撑/阻力位配置新增 min_distance_pct 和 max_distance_pct
- 成交后等待 fill_cooldown 再重建网格（避免立即重建）
- 持仓同步后立即检测成交（不等待 K 线收盘）
- 更新部署文档

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -111,6 +111,10 @@ resistance:
   
   # 融合配置
   merge_tolerance: 0.005      # 合并相近价位 0.5%
+  
+  # 距离过滤
+  min_distance_pct: 0.0001     # 最小距离 0.1% (过滤太近的价位)
+  max_distance_pct: 0.30      # 最大距离 30% (过滤太远的价位)
 
 # ============================================
 # 日志配置
