--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,5 @@ rich>=13.0.0
 # WebSocket
 websockets>=12.0
 
-# 可选：Telegram 通知
-# python-telegram-bot>=20.0
+# Telegram 通知
+python-telegram-bot>=20.0
