--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,10 +1,15 @@
-# Key Level Grid Strategy 配置 (V2.3 极简版)
+# Key Level Grid Strategy 配置 (V3.0)
 # 纯支撑/阻力位网格交易策略
+# 
+# V3.0 新增:
+# - 多时间框架 (MTF) 水位生成
+# - 评分驱动的仓位自动缩放
+# - 原子性重构与告警模式
 
 strategy:
   name: "KeyLevelGrid"
-  version: "2.3.0"
-  description: "基于支撑/阻力位的网格交易策略"
+  version: "3.0.0"
+  description: "基于 MTF 评分的网格交易策略"
 
 # 运行模式
 dry_run: false                    # false = 实盘模式，true = 模拟模式
@@ -58,6 +63,105 @@ grid:
   recon_interval_sec: 30       # Recon 对账周期
   order_action_timeout_sec: 10 # 挂/撤单超时
   restore_state_enabled: true  # 是否从持久化恢复网格
+  
+  # 🆕 V3.0 通用精度配置 (消除硬编码)
+  precision:
+    price_tolerance: 0.0001       # 价格匹配容差 (0.01%)
+    qty_tolerance: 0.05           # 数量匹配容差 (5%)
+    merge_tolerance: 0.005        # 水位合并容差 (0.5%)
+    snap_tolerance: 0.01          # 心理位吸附容差 (1%)
+  
+  # 🆕 V3.0 水位生成配置
+  level_generation:
+    enabled: true                    # 是否启用 V3.0 水位生成引擎 (false 则使用旧版 ResistanceCalculator)
+    
+    # ===== 多时间框架 (MTF) 配置 =====
+    timeframes:                      # 时间框架列表 (按优先级降序)
+      - "1d"                         # 趋势层: 日线确定多空环境
+      - "4h"                         # 战略层: 主要水位来源
+      - "15m"                        # 战术层: 精细化入场点 (仅更新评分，不触发重构)
+    
+    # ===== 斐波那契分形提取 =====
+    fibonacci_lookback:              # 斐波那契回溯周期
+      - 8                            # 短线: 约 32 小时 (4h × 8)
+      - 21                           # 中线: 约 3.5 天
+      - 55                           # 长线: 约 9.2 天 (马其诺防线)
+    
+    # ===== 评分阈值 =====
+    score_thresholds:
+      mtf_resonance: 100             # MTF 共振级: Final_Score >= 100, 仓位 × 1.5
+      strong: 60                     # 强支撑级: Final_Score >= 60, 仓位 × 1.2
+      normal: 30                     # 基准级: Final_Score >= 30, 仓位 × 1.0
+      # Final_Score < 30 的水位不开仓
+    
+    # ===== 评分权重 =====
+    scoring:
+      # 时间框架权重 (影响 base_score)
+      timeframe_weights:
+        "1d": 1.5                    # 趋势层权重
+        "4h": 1.0                    # 战略层权重 (基准)
+        "15m": 0.6                   # 战术层权重
+      
+      # 周期基础分 (影响 base_score)
+      period_scores:
+        89: 80
+        55: 80                       # 长周期: 战略级
+        34: 50
+        21: 50                       # 中周期: 核心震荡
+        13: 20
+        8: 20                        # 短周期: 灵敏
+      
+      # 成交量权重 (W_volume)
+      volume_weights:
+        hvn: 1.3                     # 高成交量节点 (HVN)
+        normal: 1.0                  # 普通区域
+        lvn: 0.6                     # 真空区 (LVN)
+      
+      # 心理位权重 (W_psychology)
+      psychology_weight: 1.2         # 对齐斐波那契/整数位时的加成
+      
+      # 趋势系数 (T_env)
+      trend_coefficients:
+        bullish:
+          support: 1.1               # 多头市场做多支撑
+          resistance: 0.9
+        bearish:
+          support: 0.9
+          resistance: 1.1            # 空头市场做空阻力
+        neutral:
+          support: 1.0
+          resistance: 1.0
+      
+      # MTF 共振系数 (M_mtf)
+      mtf_resonance:
+        "1d,4h,15m": 2.0             # 三框架共振
+        "1d,4h": 1.5                 # 趋势+战略
+        "1d,15m": 1.3                # 趋势+战术
+        "4h,15m": 1.2                # 战略+战术
+    
+    # ===== 重构触发配置 =====
+    rebuild:
+      anchor_drift_threshold: 0.03   # 锚点偏移阈值 (绝对值): 3%
+      cooldown_sec: 14400            # 重构冷冻期: 4 小时 (秒)
+      max_logs: 100                  # 最大重构日志数量
+    
+    # ===== 评分刷新配置 (不触发撤挂单) =====
+    score_refresh:
+      "4h": 900                      # 战略层刷新间隔: 15 分钟 (秒)
+      "15m": 300                     # 战术层刷新间隔: 5 分钟 (秒)
+    
+    # ===== 手动边界 (可选) =====
+    manual_boundary:
+      enabled: false                 # 是否启用手动边界
+      upper_price: null              # 手动上边界 (阻力位)
+      lower_price: null              # 手动下边界 (支撑位)
+    
+    # ===== K 线同步配置 =====
+    kline_sync:
+      max_lag_sec:                   # 最大允许延迟 (秒)
+        "1d": 300                    # 日线: 5 分钟
+        "4h": 60                     # 4h: 1 分钟
+        "15m": 30                    # 15m: 30 秒
 
 # ============================================
 # 仓位配置
