--- a/configs/config_v3_staging.yaml
+++ b/configs/config_v3_staging.yaml
@@ -5,17 +5,46 @@
 # 说明: 此配置在正式上线前用于验证 V3.0 功能
 # ============================================
 
-# 基础配置
-symbol: "BTCUSDT"
-exchange: "gate"
-mode: "staging"  # staging = 模拟环境, production = 生产环境
+# ============================================
+# 运行模式
+# ============================================
+dry_run: false                     # true = 模拟模式, false = 实盘模式
+
+# ============================================
+# 交易配置
+# ============================================
+trading:
+  symbol: "BNBUSDT"
+  exchange: "gate"
+  market_type: "futures"
+  # ⚠️ Gate.io 限制: 全仓(cross)模式无法指定杠杆，杠杆由交易所自动管理
+  # 如需固定杠杆，必须使用逐仓(isolated)模式
+  margin_mode: "isolated"         # 逐仓模式 (可指定杠杆)
+  leverage: 3                     # 杠杆倍数 (3x)
+  timeframe: "4h"
+  aux_timeframes: ["1d"]
+  default_contract_size: 0.01     # BNB 合约大小 (每张 0.01 BNB)
+
+# ============================================
+# API 配置 (从环境变量读取)
+# ============================================
+api:
+  key_env: "GATE_KLG_API_KEY"
+  secret_env: "GATE_KLG_API_SECRET"
+
+# ============================================
+# 仓位配置
+# ============================================
+position:
+  max_leverage: 3                 # 与 trading.leverage 保持一致
+  max_capital_usage: 0.8
 
 # ============================================
 # 🆕 V3.0 功能开关
 # ============================================
 v3_features:
   # 主开关: 是否启用 V3.0 水位生成
-  level_generation_enabled: true
+  level_generation_enabled: false
   
   # MTF 数据同步检查
   kline_sync_enabled: true
@@ -39,7 +68,7 @@ grid:
                                    # true: 边界内所有满足评分的水位都作为网格 (忽略 max_levels)
                                    # false: 按评分排序，只取前 max_levels 个
   min_profit_pct: 0.003            # 最小利润 0.3%
-  per_grid_amount: 100             # 每格金额 (USDT)
+  base_amount_per_grid: 0.1      # 每格数量 (BNB) - 遵循 CONSTITUTION C3 单位规范
   
   # 🆕 V3.0 精度配置 (消除硬编码)
   precision:
