--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,15 +1,10 @@
-# Key Level Grid Strategy 配置 (V3.0)
+# Key Level Grid Strategy 配置
 # 纯支撑/阻力位网格交易策略
-# 
-# V3.0 新增:
-# - 多时间框架 (MTF) 水位生成
-# - 评分驱动的仓位自动缩放
-# - 原子性重构与告警模式
 
 strategy:
   name: "KeyLevelGrid"
-  version: "3.0.0"
-  description: "基于 MTF 评分的网格交易策略"
+  version: "2.0.0"
+  description: "基于支撑/阻力位的网格交易策略"
 
 # 运行模式
 dry_run: false                    # false = 实盘模式，true = 模拟模式
@@ -20,11 +15,11 @@ trading:
   exchange: "gate"            # 交易所 (Gate)
   market_type: "futures"      # 合约市场 (USDT 永续)
   margin_mode: "cross"        # 保证金模式: cross (全仓) | isolated (逐仓)
-  leverage: 10                # 杠杆倍数 (建议 3-5x，与 position.max_leverage 保持一致)
+  leverage: 10                 # 杠杆倍数
   timeframe: "4h"             # 主交易周期
   aux_timeframes:             # 辅助周期 (多周期融合，最多 2 个，总共支持 1~3 个周期)
     - "1d"
-    - "1w"                    # 示例: ["1d"] 或 ["4h", "1d"] 或 ["1h"]
+    - "1w"
   default_contract_size: 0.0001  # 合约大小后备值（仅当 API 获取失败时使用，BTC=0.0001）
 
 # K线数据源配置
@@ -41,163 +36,54 @@ kline_feed:
 grid:
   # 网格区间
   range_mode: "manual"          # auto: 基于 S/R 自动计算 | manual: 手动设置
-  manual_upper: 98000        # manual 模式: 上边界
-  manual_lower: 80000         # manual 模式: 下边界
+  manual_upper: 108000           # manual 模式: 上边界
+  manual_lower: 80000           # manual 模式: 下边界
   
   # 网格数量
-  count_mode: "by_levels"     # by_levels: 按有效支撑位数量 | fixed: 固定数量
-  # fixed_count: 10              # fixed 模式: 网格数量
-  max_grids: 50               # 最大网格数量
+  count_mode: "by_levels"       # by_levels: 按有效支撑位数量 | fixed: 固定数量
+  max_grids: 50                 # 最大网格数量
   
   # 网格底线 (止损线)
-  floor_buffer: 0.005         # 最低支撑下方 0.5%
+  floor_buffer: 0.005           # 最低支撑下方 0.5%
   
-  # Spec2.0 核心参数
-  sell_quota_ratio: 0.7        # 动态止盈比例
+  # 核心参数
+  sell_quota_ratio: 0.7         # 动态止盈比例
   min_profit_pct: 0.0001        # 均价利润保护阈值
-  buy_price_buffer_pct: 0.002   # 买单空间缓冲
+  buy_price_buffer_pct: 0.005   # 买单空间缓冲
   sell_price_buffer_pct: 0.002  # 卖单空间缓冲
   base_amount_per_grid: 0.001   # 标准网格单位（btc数量）
   max_fill_per_level: 3         # 单水位最大补买次数
-  base_position_locked: 0.0    # 固定底仓数量（btc数量）
-  recon_interval_sec: 30       # Recon 对账周期
-  order_action_timeout_sec: 10 # 挂/撤单超时
-  restore_state_enabled: true  # 是否从持久化恢复网格
-  
-  # 🆕 V3.0 通用精度配置 (消除硬编码)
-  precision:
-    price_tolerance: 0.0001       # 价格匹配容差 (0.01%)
-    qty_tolerance: 0.05           # 数量匹配容差 (5%)
-    merge_tolerance: 0.005        # 水位合并容差 (0.5%)
-    snap_tolerance: 0.01          # 心理位吸附容差 (1%)
-  
-  # 🆕 V3.0 水位生成配置
-  level_generation:
-    enabled: false                    # 是否启用 V3.0 水位生成引擎 (false 则使用旧版 ResistanceCalculator)
-    
-    # ===== 多时间框架 (MTF) 配置 =====
-    timeframes:                      # 时间框架列表 (按优先级降序)
-      - "1d"                         # 趋势层: 日线确定多空环境
-      - "4h"                         # 战略层: 主要水位来源
-      - "15m"                        # 战术层: 精细化入场点 (仅更新评分，不触发重构)
-    
-    # ===== 斐波那契分形提取 =====
-    fibonacci_lookback:              # 斐波那契回溯周期
-      - 8                            # 短线: 约 32 小时 (4h × 8)
-      - 21                           # 中线: 约 3.5 天
-      - 55                           # 长线: 约 9.2 天 (马其诺防线)
-    
-    # ===== 评分阈值 =====
-    score_thresholds:
-      mtf_resonance: 100             # MTF 共振级: Final_Score >= 100, 仓位 × 1.5
-      strong: 60                     # 强支撑级: Final_Score >= 60, 仓位 × 1.2
-      normal: 30                     # 基准级: Final_Score >= 30, 仓位 × 1.0
-      # Final_Score < 30 的水位不开仓
-    
-    # ===== 评分权重 =====
-    scoring:
-      # 时间框架权重 (影响 base_score)
-      timeframe_weights:
-        "1d": 1.5                    # 趋势层权重
-        "4h": 1.0                    # 战略层权重 (基准)
-        "15m": 0.6                   # 战术层权重
-      
-      # 周期基础分 (数字 key 与代码兼容)
-      period_scores:
-        89: 80
-        55: 80                       # 长周期: 战略级
-        34: 50
-        21: 50                       # 中周期: 核心震荡
-        13: 20
-        8: 20                        # 短周期: 灵敏
-      
-      # 成交量权重 (W_volume)
-      volume_weights:
-        hvn: 1.3                     # 高成交量节点 (HVN)
-        normal: 1.0                  # 普通区域
-        lvn: 0.6                     # 真空区 (LVN)
-      
-      # 心理位权重 (W_psychology)
-      psychology_weight: 1.2         # 对齐斐波那契/整数位时的加成
-      
-      # 趋势系数 (T_env) - 嵌套格式与代码兼容
-      trend_coefficients:
-        bullish:
-          support: 1.1               # 多头市场做多支撑
-          resistance: 0.9
-        bearish:
-          support: 0.9
-          resistance: 1.1            # 空头市场做空阻力
-        neutral:
-          support: 1.0
-          resistance: 1.0
-      
-      # MTF 共振系数 (M_mtf)
-      mtf_resonance:
-        "1d,4h,15m": 2.0             # 三框架共振
-        "1d,4h": 1.5                 # 趋势+战略
-        "1d,15m": 1.3                # 趋势+战术
-        "4h,15m": 1.2                # 战略+战术
-      
-      # 评分阈值
-      min_score_threshold: 30        # 水位最低评分阈值 (低于此分不生成水位)
-    
-    # ===== 重构触发配置 =====
-    rebuild:
-      anchor_drift_threshold: 0.03   # 锚点偏移阈值 (绝对值): 3%
-      cooldown_sec: 14400            # 重构冷冻期: 4 小时 (秒)
-      max_logs: 100                  # 最大重构日志数量
-    
-    # ===== 评分刷新配置 (不触发撤挂单) =====
-    score_refresh:
-      "4h": 900                      # 战略层刷新间隔: 15 分钟 (秒)
-      "15m": 300                     # 战术层刷新间隔: 5 分钟 (秒)
-    
-    # ===== 手动边界 (可选) =====
-    manual_boundary:
-      enabled: false                 # 是否启用手动边界
-      upper_price: null              # 手动上边界 (阻力位)
-      lower_price: null              # 手动下边界 (支撑位)
-    
-    # ===== K 线同步配置 =====
-    kline_sync:
-      max_lag_sec:                   # 最大允许延迟 (秒)
-        "1d": 300                    # 日线: 5 分钟
-        "4h": 60                     # 4h: 1 分钟
-        "15m": 30                    # 15m: 30 秒
+  base_position_locked: 0.0     # 固定底仓数量（btc数量）
+  recon_interval_sec: 30        # Recon 对账周期
+  order_action_timeout_sec: 10  # 挂/撤单超时
+  restore_state_enabled: true   # 是否从持久化恢复网格
 
 # ============================================
 # 仓位配置
 # ============================================
 position:
-  # total_capital: 自动从交易所读取，无需手动配置
-  max_leverage: 10            # 最大杠杆 (需与 trading.leverage 保持一致)
-  max_capital_usage: 0.8      # 使用 80% 资金，留 20% 缓冲
-  
-  # Spec2.0：头寸由 Recon/Event 控制，仓位分配不再使用
+  max_leverage: 3               # 最大杠杆 (需与 trading.leverage 保持一致)
+  max_capital_usage: 0.8        # 使用 80% 资金，留 20% 缓冲
 
 # ============================================
 # 止损配置 (总仓位止损)
 # ============================================
 stop_loss:
-  mode: "total"               # total: 统一止损 (不对单个网格止损)
-  trigger: "grid_floor"       # grid_floor: 跌破网格底线触发 | fixed_pct: 固定比例
-  # fixed_pct: 0.10             # fixed_pct 模式: 10% 止损
-
-
+  mode: "total"                 # total: 统一止损 (不对单个网格止损)
+  trigger: "grid_floor"         # grid_floor: 跌破网格底线触发 | fixed_pct: 固定比例
 
 # ============================================
-# 支撑/阻力位计算
+# 支撑/阻力位计算 (ResistanceCalculator)
 # ============================================
 resistance:
   # 强度阈值 (核心参数)
-  min_strength: 30            # 只使用 >= 80 分的支撑/阻力位
+  min_strength: 30              # 只使用 >= 30 分的支撑/阻力位
   
   # 摆动高低点 (三尺度)
   swing_lookbacks:
-    - 5                       # 短期
-    - 13                      # 中期
-    - 34                      # 长期
+    - 5                         # 短期
+    - 13                        # 中期
+    - 34                        # 长期
   
   # 斐波那契比例
   fib_ratios:
@@ -212,20 +98,20 @@ resistance:
   
   # 成交量密集区
   volume_profile_enabled: true
-  volume_buckets: 50          # 价格分桶数
-  volume_top_n: 5             # 取 Top N 成交量节点
-  volume_bucket_pct: 0.01     # 价格分桶百分比 1%
-  volume_top_pct: 0.20        # Top 20% 成交量区
+  volume_buckets: 50            # 价格分桶数
+  volume_top_n: 5               # 取 Top N 成交量节点
+  volume_bucket_pct: 0.01       # 价格分桶百分比 1%
+  volume_top_pct: 0.20          # Top 20% 成交量区
   
   # 多周期融合
-  mtf_boost: 0.30             # 多周期叠加强度提升 30%
+  mtf_boost: 0.30               # 多周期叠加强度提升 30%
   
   # 融合配置
-  merge_tolerance: 0.005      # 合并相近价位 0.5%
+  merge_tolerance: 0.005        # 合并相近价位 0.5%
   
   # 距离过滤
-  min_distance_pct: 0.0001     # 最小距离 0.1% (过滤太近的价位)
-  max_distance_pct: 0.30      # 最大距离 30% (过滤太远的价位)
+  min_distance_pct: 0.0001      # 最小距离 0.1% (过滤太近的价位)
+  max_distance_pct: 0.30        # 最大距离 30% (过滤太远的价位)
 
 # ============================================
 # 日志配置
@@ -239,48 +125,46 @@ logging:
 api:
   key_env: "GATE_KLG_API_KEY"
   secret_env: "GATE_KLG_API_SECRET"
-  passphrase_env: ""          # 若有子账户/额外口令可填，否则留空
+  passphrase_env: ""
 
 # ============================================
 # Telegram 通知配置
 # ============================================
 telegram:
-  # 基础配置（从环境变量读取）
-  enabled: true              # 是否启用 Telegram 通知
+  enabled: true
   bot_token_env: "TG_BOT_TOKEN"
   chat_id_env: "TG_CHAT_ID"
   
-  # 通知开关
   notifications:
-    # 必要通知（建议开启）
-    startup: true             # 启动通知
-    shutdown: true            # 停止通知
-    error: true               # 错误通知
-    order_filled: true        # 成交通知
+    # 必要通知
+    startup: true
+    shutdown: true
+    error: true
+    order_filled: true
     
     # 可选通知
-    order_placed: false       # 挂单通知（较频繁，建议关闭）
-    orders_summary: true      # 挂单汇总（启动时发送）
-    quota_event: true         # 配额对齐/清空通知
-    position_flux: true       # 持仓变化通知
-    order_sync: true          # 挂单同步提醒
-    system_info: true         # 系统操作记录
-    system_alert: true        # 关键告警
+    order_placed: false
+    orders_summary: true
+    quota_event: true
+    position_flux: true
+    order_sync: true
+    system_info: true
+    system_alert: true
     
     # 风险通知
-    risk_warning: true        # 风险预警
-    near_stop_loss_pct: 0.02  # 距止损预警阈值 2%
+    risk_warning: true
+    near_stop_loss_pct: 0.02
     
     # 汇总通知
-    daily_summary: true       # 每日汇总
+    daily_summary: true
     daily_summary_time: "20:00"
     
-    # 心跳（可选）
-    heartbeat: false          # 心跳通知
+    # 心跳
+    heartbeat: false
     heartbeat_interval_hours: 4
-    heartbeat_idle_sec: 3600  # 无成交心跳阈值（秒）
+    heartbeat_idle_sec: 3600
 
-    # 静默模式（防刷屏）
-    silent_mode: true         # 成交合并
-    merge_fill_window_sec: 5  # 成交合并窗口（秒）
-    min_notify_interval_sec: 5  # 同类通知最小间隔（秒）
+    # 静默模式
+    silent_mode: true
+    merge_fill_window_sec: 5
+    min_notify_interval_sec: 5
