fix: 修复多个关键 bug
1. 修复 Recon 重复挂单 bug
   - 冷却检查移到获取锁之后，防止与 force_rebuild_grid 并发导致重复挂单

2. 修复动态角色判定污染状态 bug
   - build_recon_actions 不再修改原对象的 role/side 字段
   - build_level_mapping 使用 ID 集合判断支撑位，不依赖 role 字段

3. 修复 submit_order 返回值处理
   - 从 Order 对象获取 exchange_order_id，而非从 bool 返回值

4. 修复 set_margin_mode 未实际调用 API
   - 实际调用 ccxt 的 set_margin_mode 方法

5. 显示面板根据当前价格动态分类支撑/阻力位

6. 删除 position.max_leverage（与 trading.leverage 冲突）

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -62,7 +62,6 @@ grid:
 # 仓位配置
 # ============================================
 position:
-  max_leverage: 3               # 最大杠杆 (需与 trading.leverage 保持一致)
   max_capital_usage: 0.8        # 使用 80% 资金，留 20% 缓冲
 
 # ============================================
@@ -160,7 +159,7 @@ telegram:
     daily_summary_time: "20:00"
     
     # 心跳
-    heartbeat: false
+    heartbeat: true
     heartbeat_interval_hours: 4
     heartbeat_idle_sec: 3600
 
