--- a/deploy/env.example
+++ b/deploy/env.example
@@ -2,19 +2,32 @@
 # 复制此文件到服务器 /opt/key-level-grid/.env 并填入实际值
 
 # ============================================
-# Gate.io API (必填)
+# 实例1: 主账户 (klg.service)
 # ============================================
 GATE_KLG_API_KEY=your_api_key_here
 GATE_KLG_API_SECRET=your_api_secret_here
-
-# ============================================
-# Telegram 通知 (可选)
-# ============================================
 TG_BOT_TOKEN=your_telegram_bot_token
 TG_CHAT_ID=your_telegram_chat_id
 
 # ============================================
+# 实例2: SOL 账户 (klg-sol.service)
+# ============================================
+# GATE_SOL_API_KEY=your_sol_api_key
+# GATE_SOL_API_SECRET=your_sol_api_secret
+# TG_SOL_BOT_TOKEN=your_sol_bot_token
+# TG_SOL_CHAT_ID=your_sol_chat_id
+
+# ============================================
+# 实例3: ETH 账户 (klg-eth.service)
+# ============================================
+# GATE_ETH_API_KEY=your_eth_api_key
+# GATE_ETH_API_SECRET=your_eth_api_secret
+# TG_ETH_BOT_TOKEN=your_eth_bot_token
+# TG_ETH_CHAT_ID=your_eth_chat_id
+
+# ============================================
 # 其他配置 (可选)
 # ============================================
+# POLYGON_API_KEY=your_polygon_api_key
 # LOG_LEVEL=INFO
 # PYTHONUNBUFFERED=1
